tests/compile-fail/several_integer_types.stderr
error[E0566]: conflicting representation hints
 --> tests/compile-fail/several_integer_types.rs:3:16
  |
3 | #[discriminant(u8, u32)]
  |                ^^  ^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
  = note: `#[deny(conflicting_repr_hints)]` on by default

error[E0566]: conflicting representation hints
 --> tests/compile-fail/several_integer_types.rs:9:8
  |
9 | #[repr(u8, u32)]
  |        ^^  ^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
